--- a/css/style.css
+++ b/css/style.css
@@ -476,7 +476,7 @@ a:hover {
   flex-grow: 10;
   width: 432px;
   padding: 16px 22px 16px 10px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
 }
@@ -517,7 +517,7 @@ a:hover {
   line-height: 22px;
   padding-bottom: 3px;
   margin-bottom: 4px;
-  border-bottom: 1px solid #32B38C;
+  border-bottom: 1px solid #32b38c;
   width: 100%;
 }
 
@@ -567,8 +567,8 @@ a:hover {
 
 /*User-cart*/
 .user-cart__inner {
-  background: #FFFFFF;
-  border: 1px solid #E9E9E9;
+  background: #ffffff;
+  border: 1px solid #e9e9e9;
   border-radius: 10px;
   padding: 12px 11px 0 11px;
 }
@@ -630,7 +630,7 @@ a:hover {
   -webkit-text-decoration-line: underline;
   text-decoration-line: underline;
   cursor: pointer;
-  color: #9E9E9E;
+  color: #9e9e9e;
 }
 
 .user-cart__nav {
@@ -661,22 +661,22 @@ a:hover {
 }
 
 .user-cart__button.accepted {
-  background: #32B28C;
+  background: #32b28c;
 }
 
 .user-cart__button.reply {
-  background: #E58641;
+  background: #e58641;
 }
 
 .user-cart__button.denied {
-  background: #BF5B5B;
+  background: #bf5b5b;
 }
 
 .user-cart__price {
   max-width: 138px;
   width: 100%;
   height: 31px;
-  background: #E4EBFF;
+  background: #e4ebff;
   border-radius: 164px;
   font-weight: 500;
   font-size: 14px;
@@ -1391,7 +1391,7 @@ a:hover {
 }
 
 .search-mobile__item:last-child {
-  background: #F5F7FD;
+  background: #f5f7fd;
 }
 
 .search-mobile__title {
@@ -1590,7 +1590,7 @@ a:hover {
     line-height: 27px;
     text-align: center;
     letter-spacing: 0.035em;
-    color: #4466BC;
+    color: #4466bc;
   }
 }
 
@@ -1850,7 +1850,7 @@ a:hover {
 /*About*/
 .about {
   margin-top: 67px;
-  background: #F5F7FD;
+  background: #f5f7fd;
   display: none;
 }
 
@@ -1926,7 +1926,7 @@ a:hover {
 
 @media screen and (max-width: 768px) {
   .contract-rate {
-    background: #F5F7FD;
+    background: #f5f7fd;
     margin-top: 57px;
   }
 }
@@ -2064,7 +2064,7 @@ a:hover {
 
 @media screen and (max-width: 768px) {
   .why-contract-rate {
-    margin-top: 58px;
+    margin-top: 0px;
   }
 }
 
@@ -2209,7 +2209,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .view-offers {
     margin-top: 60px;
-    background: #F5F7FD;
+    background: #f5f7fd;
   }
 }
 
