--- a/scss/style.scss
+++ b/scss/style.scss
@@ -257,8 +257,8 @@ $green1: #32b28c;
 $white: #fff;
 $black: #000;
 $blue: #4466bc;
-$blue_light: #F5F7FD;
-$grey: #9E9E9E;
+$blue_light: #f5f7fd;
+$grey: #9e9e9e;
 
 //! Reset
 /*Reset*/
@@ -416,7 +416,7 @@ a {
 /*Block*/
 
 .bg {
-  background: url(../images/search_fon.png)  no-repeat;
+  background: url(../images/search_fon.png) no-repeat;
   background-size: 100%;
   position: absolute;
   width: 100%;
@@ -426,11 +426,10 @@ a {
   @media screen and (max-width: 768px) {
     display: none;
   }
-
 }
 
 .bg1 {
-  background: url(../images/fon.png)  no-repeat;
+  background: url(../images/fon.png) no-repeat;
   background-size: 100%;
   position: absolute;
   width: 100%;
@@ -440,7 +439,6 @@ a {
   @media screen and (max-width: 768px) {
     display: none;
   }
-
 }
 
 .title {
@@ -503,10 +501,9 @@ a {
   flex-grow: 10;
   width: 432px;
   padding: 16px 22px 16px 10px;
-  background: #FFFFFF;
+  background: #ffffff;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-
 
   @media screen and (max-width: 768px) {
     width: 100%;
@@ -539,7 +536,7 @@ a {
     line-height: 22px;
     padding-bottom: 3px;
     margin-bottom: 4px;
-    border-bottom: 1px solid #32B38C;
+    border-bottom: 1px solid #32b38c;
     width: 100%;
   }
 
@@ -552,10 +549,10 @@ a {
     line-height: 16px;
     margin-bottom: 12px;
 
-    span{
+    span {
       display: flex;
       align-items: flex-start;
-      img{
+      img {
         margin-right: 8px;
       }
     }
@@ -575,10 +572,10 @@ a {
     }
   }
 
-  &-img{
+  &-img {
     display: flex;
     align-items: flex-start;
-    img{
+    img {
       margin-right: 10px;
     }
   }
@@ -596,10 +593,9 @@ a {
 //! User-cart
 /*User-cart*/
 .user-cart {
-
   &__inner {
-    background: #FFFFFF;
-    border: 1px solid #E9E9E9;
+    background: #ffffff;
+    border: 1px solid #e9e9e9;
     border-radius: 10px;
     padding: 12px 11px 0 11px;
   }
@@ -633,7 +629,7 @@ a {
 
     margin-bottom: 12px;
 
-    span{
+    span {
       display: flex;
       align-items: flex-start;
     }
@@ -648,11 +644,10 @@ a {
     align-items: center;
     margin-bottom: 11px;
 
-    span{
+    span {
       display: flex;
       align-items: flex-start;
       margin-left: 9px;
-
     }
   }
 
@@ -686,23 +681,22 @@ a {
     text-transform: uppercase;
     margin-right: 25px;
     border-radius: 164px;
-    span{
+    span {
       display: flex;
       align-items: flex-start;
       margin-right: 5px;
     }
-    
 
-    &.accepted{
-      background: #32B28C;
+    &.accepted {
+      background: #32b28c;
     }
 
-    &.reply{
-      background: #E58641;
+    &.reply {
+      background: #e58641;
     }
 
-    &.denied{
-      background: #BF5B5B;
+    &.denied {
+      background: #bf5b5b;
     }
   }
 
@@ -710,7 +704,7 @@ a {
     max-width: 138px;
     width: 100%;
     height: 31px;
-    background: #E4EBFF;
+    background: #e4ebff;
     border-radius: 164px;
     font-weight: 500;
     font-size: 14px;
@@ -1285,9 +1279,7 @@ a {
 //! Search-pc
 /*Search-pc*/
 .search {
-
-  &.search-pc{
-    
+  &.search-pc {
     @media screen and (max-width: 768px) {
       display: none;
     }
@@ -1298,7 +1290,6 @@ a {
     align-items: center;
     justify-content: space-between;
     padding-top: 60px;
-
   }
 
   &__title {
@@ -1346,7 +1337,6 @@ a {
     @media screen and (max-width: 991px) {
       width: 300px;
     }
-
   }
 }
 
@@ -1356,16 +1346,15 @@ a {
   display: none;
 
   @media screen and (max-width: 768px) {
-  display: block;
+    display: block;
   }
 
   &__inner {
-    
   }
 
   &__item {
     padding: 34px 15px;
-    &:last-child{
+    &:last-child {
       background: $blue_light;
     }
   }
@@ -1415,17 +1404,17 @@ a {
     max-width: 290px;
     margin: 0 auto;
 
-    span{
+    span {
       display: flex;
       align-items: flex-start;
       margin-right: 10px;
     }
 
-    &.blue{
+    &.blue {
       background: $blue;
     }
 
-    &.green{
+    &.green {
       background: $green1;
     }
   }
@@ -1434,14 +1423,13 @@ a {
 //! Solutions
 /*Solutions*/
 .solutions {
-
-  &-pc{
+  &-pc {
     @media screen and (max-width: 768px) {
-    display: none;
+      display: none;
     }
   }
 
-  &-mobi{
+  &-mobi {
     display: none;
     @media screen and (max-width: 768px) {
       display: block;
@@ -1453,13 +1441,13 @@ a {
     @media screen and (max-width: 1280px) {
       padding-top: 100px;
     }
-    
+
     @media screen and (max-width: 991px) {
       padding-top: 60px;
     }
 
     @media screen and (max-width: 768px) {
-    padding: 50px 0;
+      padding: 50px 0;
     }
   }
 
@@ -1534,7 +1522,7 @@ a {
     padding: 11px;
 
     @media screen and (max-width: 1280px) {
-    font-size: 13px;
+      font-size: 13px;
     }
 
     @media screen and (max-width: 768px) {
@@ -1543,8 +1531,8 @@ a {
       line-height: 27px;
       text-align: center;
       letter-spacing: 0.035em;
-      
-      color: #4466BC;
+
+      color: #4466bc;
     }
   }
 }
@@ -1552,15 +1540,15 @@ a {
 //! Employer-card
 /*Employer-card*/
 .employer-card {
-margin-top: 200px;
+  margin-top: 200px;
 
-@media screen and (max-width: 1280px) {
-margin-top: 160px;
-}
+  @media screen and (max-width: 1280px) {
+    margin-top: 160px;
+  }
 
-@media screen and (max-width: 768px) {
-margin-top: 56px;
-}
+  @media screen and (max-width: 768px) {
+    margin-top: 56px;
+  }
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -1571,7 +1559,7 @@ margin-top: 56px;
     }
   }
 
-  &__item{
+  &__item {
     @media screen and (max-width: 768px) {
       width: 100%;
     }
@@ -1595,10 +1583,10 @@ margin-top: 56px;
   }
 
   &__title {
-    color:$blue;
+    color: $blue;
     margin-bottom: 37px;
 
-    span{
+    span {
       display: block;
     }
 
@@ -1609,7 +1597,7 @@ margin-top: 56px;
       letter-spacing: 0.035em;
       margin-bottom: 20px;
 
-      span{
+      span {
         display: none;
       }
     }
@@ -1620,18 +1608,18 @@ margin-top: 56px;
     font-size: 24px;
     line-height: 35px;
     letter-spacing: 0.035em;
-    p{
+    p {
       margin-bottom: 70px;
-    &:last-child{
-      margin-bottom: 0;
-    }
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
-    a{
+    a {
       color: $blue;
       border-bottom: 1px solid $blue;
-      &:hover{
-        color:$green;
+      &:hover {
+        color: $green;
         border-bottom: 1px solid $green;
       }
     }
@@ -1641,7 +1629,7 @@ margin-top: 56px;
       font-size: 16px;
       line-height: 25px;
       letter-spacing: 0.035em;
-      p{
+      p {
         margin-bottom: 30px;
       }
     }
@@ -1657,13 +1645,13 @@ margin-top: 56px;
 .choice {
   margin-top: 150px;
 
-  &-pc{
+  &-pc {
     @media screen and (max-width: 768px) {
       display: none;
     }
   }
 
-  &-mobi{
+  &-mobi {
     display: none;
     @media screen and (max-width: 768px) {
       display: block;
@@ -1691,32 +1679,30 @@ margin-top: 56px;
   }
 
   &__title {
-    color:$blue;
+    color: $blue;
     margin-bottom: 36px;
     max-width: 600px;
   }
 
   &__text {
-
     font-weight: 400;
     font-size: 24px;
     line-height: 33px;
     letter-spacing: 0.035em;
-    p{
+    p {
       margin-bottom: 50px;
 
-      &:last-child{
+      &:last-child {
         margin: 0;
       }
 
       @media screen and (max-width: 768px) {
         margin-bottom: 44px;
 
-        &:last-child{
+        &:last-child {
           display: none;
         }
       }
-
     }
 
     @media screen and (max-width: 768px) {
@@ -1746,7 +1732,7 @@ margin-top: 56px;
     }
   }
 
-  &__block-mobile{
+  &__block-mobile {
     position: relative;
     display: none;
 
@@ -1756,12 +1742,11 @@ margin-top: 56px;
     }
   }
 
-  &__img{
+  &__img {
     position: absolute;
     bottom: -35px;
     left: 50%;
     transform: translateX(-50%);
-
   }
 }
 
@@ -1803,21 +1788,21 @@ margin-top: 56px;
   }
 }
 
-.bg-3{
+.bg-3 {
   background-size: 100%;
 }
 
 //! Contract-rate
 /*Contract-rate*/
 .contract-rate {
-  &-pc{
+  &-pc {
     display: block;
     @media screen and (max-width: 768px) {
       display: none;
     }
   }
 
-  &-mobi{
+  &-mobi {
     display: none;
 
     @media screen and (max-width: 768px) {
@@ -1870,7 +1855,7 @@ margin-top: 56px;
       align-items: center;
       margin-right: 0;
       width: 100%;
-      img{
+      img {
         width: 222px;
       }
     }
@@ -1908,7 +1893,6 @@ margin-top: 56px;
   }
 
   &__text {
-
     &.mobi {
       display: none;
       @media screen and (max-width: 768px) {
@@ -1921,7 +1905,7 @@ margin-top: 56px;
         max-width: 300px;
       }
     }
-  
+
     &.pc {
       @media screen and (max-width: 768px) {
         display: none;
@@ -1933,14 +1917,13 @@ margin-top: 56px;
 //! Why-contract-rate
 /*Why-contract-rate*/
 .why-contract-rate {
-
-  &.pc{
+  &.pc {
     @media screen and (max-width: 768px) {
       display: none;
     }
   }
 
-  &.mobi{
+  &.mobi {
     display: none;
     @media screen and (max-width: 768px) {
       display: block;
@@ -1995,17 +1978,17 @@ margin-top: 56px;
     font-size: 24px;
     letter-spacing: 0.035em;
 
-    p{
-      &:first-child{
+    p {
+      &:first-child {
         margin-bottom: 40px;
       }
 
       @media screen and (max-width: 768px) {
-        &:last-child{
+        &:last-child {
           display: none;
         }
 
-        &:first-child{
+        &:first-child {
           margin-bottom: 50px;
         }
 
@@ -2029,12 +2012,9 @@ margin-top: 56px;
         justify-content: center;
         margin-bottom: 50px;
       }
-
-  
     }
-    
-    &.pc {
 
+    &.pc {
       @media screen and (max-width: 1280px) {
         width: 350px;
       }
@@ -2044,12 +2024,12 @@ margin-top: 56px;
       }
 
       @media screen and (max-width: 768px) {
-      display: none;
+        display: none;
       }
     }
   }
 
-  &__img{
+  &__img {
     display: flex;
     align-items: flex-start;
     flex-shrink: 0;
@@ -2065,10 +2045,9 @@ margin-top: 56px;
       letter-spacing: 0.035em;
     }
   }
-
 }
 
-.bg-4{
+.bg-4 {
   transform: translateY(-500px);
 }
 
@@ -2084,7 +2063,6 @@ margin-top: 56px;
   @media screen and (max-width: 768px) {
     margin-top: 60px;
     background: $blue_light;
-
   }
 
   &__inner {
@@ -2114,7 +2092,7 @@ margin-top: 56px;
   }
 
   &__title {
-    color:$blue;
+    color: $blue;
     margin-bottom: 70px;
     letter-spacing: normal;
 
@@ -2128,12 +2106,12 @@ margin-top: 56px;
     display: flex;
     text-transform: uppercase;
 
-    span{
+    span {
       display: flex;
       align-items: flex-start;
       margin-right: 14px;
     }
-    .btn{
+    .btn {
       border-radius: 100px;
       width: 470px;
       height: 77px;
@@ -2147,7 +2125,7 @@ margin-top: 56px;
     }
 
     @media screen and (max-width: 991px) {
-      .btn{
+      .btn {
         width: 370px;
       }
     }
@@ -2161,25 +2139,12 @@ margin-top: 56px;
         margin: 0 0 30px;
       }
 
-      .btn{
+      .btn {
         width: 100%;
         flex-grow: 10;
         height: 50px;
         font-size: 16px;
-
       }
     }
   }
 }
-
-
-
-
-
-
-
-
-
-
-
-
