--- a/scss/style.scss
+++ b/scss/style.scss
@@ -401,7 +401,7 @@ a {
 @media screen and (max-width: 768px) {
   .container {
     width: 100%;
-    padding: 0 40px;
+    padding: 0 15px;
   }
 }
 
@@ -1349,9 +1349,6 @@ a {
     display: block;
   }
 
-  &__inner {
-  }
-
   &__item {
     padding: 34px 15px;
     &:last-child {
@@ -1366,16 +1363,20 @@ a {
     text-align: center;
     letter-spacing: 0.02em;
 
-    margin-bottom: 60px;
+    margin-bottom: 50px;
   }
 
   &__subtitle {
-    margin-bottom: 55px;
+    margin-bottom: 50px;
     font-weight: 600;
     font-size: 16px;
     line-height: 25px;
     text-align: center;
     letter-spacing: 0.035em;
+
+    @media screen and (max-width: 768px) {
+      font-size: 13px;
+    }
   }
 
   &__images {
@@ -1766,6 +1767,9 @@ a {
   }
 
   &__content {
+    @media screen and (max-width: 768px) {
+      padding: 0 15px;
+    }
   }
 
   &__title {
@@ -1821,7 +1825,7 @@ a {
 
   @media screen and (max-width: 768px) {
     background: $blue_light;
-    margin-top: 57px;
+    margin-top: 0px;
   }
 
   &__inner {
@@ -2148,3 +2152,82 @@ a {
     }
   }
 }
+
+//! Information
+/*Information*/
+.information {
+  margin-top: 200px;
+
+  @media screen and (max-width: 1280px) {
+    margin-top: 150px;
+  }
+
+  @media screen and (max-width: 768px) {
+    background: $blue_light;
+    margin-top: 0px;
+    padding: 58px 0;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__content {
+    max-width: 700px;
+
+    @media screen and (max-width: 1280px) {
+      margin-right: 30px;
+    }
+
+    @media screen and (max-width: 991px) {
+      margin: 0;
+    }
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 45px;
+    &:last-child{
+      margin: 0;
+    }
+  }
+
+  &__img {
+    display: flex;
+    align-items: flex-start;
+    flex-shrink: 0;
+    margin-right: 40px;
+
+    @media screen and (max-width: 768px) {
+      margin-right: 17px;
+      width: 39px;
+    }
+  }
+
+  &__text {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33px;
+
+    @media screen and (max-width: 768px) {
+      font-weight: 400;
+      font-size: 15px;
+      line-height: 20px;
+    }
+  }
+
+  &__images {
+    display: flex;
+    align-items: flex-start;
+    flex-shrink: 0;
+
+    @media screen and (max-width: 991px) {
+      display: none;
+    }
+  }
+}
+
+
