--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,18 @@ a:hover {
   }
 }
 
+.btn1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0.035em;
+  text-transform: uppercase;
+  color: #fff;
+}
+
 .btn {
   display: flex;
   justify-content: center;
@@ -540,6 +552,12 @@ a:hover {
   margin-right: 8px;
 }
 
+@media screen and (max-width: 768px) {
+  .card-work__name {
+    font-size: 14px;
+  }
+}
+
 .card-work__info {
   font-weight: 500;
   font-size: 12px;
@@ -553,6 +571,7 @@ a:hover {
   .card-work__info {
     grid-gap: 6px;
     grid-template-columns: repeat(1, 1fr);
+    font-size: 14px;
   }
 }
 
@@ -1394,6 +1413,14 @@ a:hover {
   background: #f5f7fd;
 }
 
+.search-mobile__item:first-child .search-mobile__title {
+  font-size: 50px;
+}
+
+.search-mobile__item:first-child .search-mobile__subtitle {
+  font-size: 16px;
+}
+
 .search-mobile__title {
   font-weight: 700;
   font-size: 40px;
@@ -1457,6 +1484,12 @@ a:hover {
 
 .search-mobile__button.green {
   background: #32b28c;
+}
+
+@media screen and (max-width: 768px) {
+  .search-mobile__button {
+    height: 50px;
+  }
 }
 
 /*Solutions*/
@@ -1832,6 +1865,9 @@ a:hover {
   .choice__images {
     width: 276px;
   }
+  .choice__images img {
+    margin: 0 auto;
+  }
 }
 
 .choice__block-mobile {
@@ -1895,8 +1931,8 @@ a:hover {
   grid-template-columns: repeat(1, 1fr);
 }
 
-.bg-3 {
-  background-size: 100%;
+.bg-contract-rate {
+  transform: translateY(-300px);
 }
 
 /*Contract-rate*/
@@ -1952,7 +1988,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .contract-rate__inner {
     flex-direction: column-reverse;
-    padding: 48px 20px 63px;
+    padding: 48px 15px 63px;
   }
 }
 
@@ -2001,7 +2037,7 @@ a:hover {
 }
 
 .contract-rate__title {
-  color: #55d1ad;
+  color: #32b28c;
   margin-bottom: 36px;
 }
 
@@ -2089,7 +2125,7 @@ a:hover {
 @media screen and (max-width: 768px) {
   .why-contract-rate__inner {
     flex-direction: column;
-    padding: 58px 20px 50px;
+    padding: 58px 15px 50px;
   }
 }
 
@@ -2203,7 +2239,7 @@ a:hover {
   }
 }
 
-.bg-4 {
+.bg-view-offers {
   transform: translateY(-500px);
 }
 
@@ -2279,6 +2315,12 @@ a:hover {
   margin-right: 14px;
 }
 
+@media screen and (max-width: 768px) {
+  .view-offers__button span {
+    height: 13px;
+  }
+}
+
 .view-offers__button .btn {
   border-radius: 100px;
   width: 470px;
@@ -2315,6 +2357,10 @@ a:hover {
     height: 50px;
     font-size: 16px;
   }
+}
+
+.bg-information {
+  transform: translateY(-300px);
 }
 
 /*Information*/
@@ -2404,6 +2450,588 @@ a:hover {
 
 @media screen and (max-width: 991px) {
   .information__images {
+    display: none;
+  }
+}
+
+.bg-video-training {
+  transform: translateY(-200px);
+}
+
+/*Video-training*/
+.video-training {
+  margin-top: 200px;
+}
+
+@media screen and (max-width: 1280px) {
+  .video-training {
+    margin-top: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-training {
+    margin-top: 32px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-training__inner {
+    max-width: 300px;
+    margin: 0 auto;
+  }
+}
+
+.video-training__title {
+  color: #4466bc;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+@media screen and (max-width: 1280px) {
+  .video-training__title {
+    margin-bottom: 80px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-training__title {
+    max-width: 260px;
+    margin: 0 auto 41px;
+  }
+}
+
+.video-training__items {
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+@media screen and (max-width: 1280px) {
+  .video-training__items {
+    grid-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .video-training__items {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-training__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.video-training__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .video-training__item {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+
+.video-training__images {
+  margin-bottom: 40px;
+  display: flex;
+  align-items: flex-start;
+  height: 162px;
+}
+
+@media screen and (max-width: 1280px) {
+  .video-training__images {
+    height: 120px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-training__images {
+    height: 75px;
+    margin: 0 30px 0 0;
+  }
+}
+
+.video-training__label {
+  background: #ffffff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 100px;
+  width: 201px;
+  height: 55px;
+  letter-spacing: normal;
+  font-size: 22px;
+  color: #000;
+}
+
+@media screen and (max-width: 1280px) {
+  .video-training__label {
+    width: 170px;
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .video-training__label {
+    width: 185px;
+    height: 45px;
+    font-weight: 500;
+    font-size: 20px;
+  }
+}
+
+.bg-estimates {
+  transform: translateY(150px);
+}
+
+/*Estimates*/
+.estimates {
+  margin-top: 200px;
+}
+
+@media screen and (max-width: 1280px) {
+  .estimates {
+    margin-top: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .estimates {
+    background: #f5f7fd;
+    margin-top: 31px;
+  }
+}
+
+.estimates__inner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 768px) {
+  .estimates__inner {
+    flex-direction: column;
+    justify-content: center;
+    padding: 60px 0;
+  }
+}
+
+.estimates__content {
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 33px;
+  letter-spacing: 0.025em;
+  max-width: 590px;
+}
+
+@media screen and (max-width: 991px) {
+  .estimates__content {
+    max-width: 450px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .estimates__content {
+    text-align: center;
+    margin-bottom: 32px;
+  }
+}
+
+.estimates__title {
+  color: #32b28c;
+  margin-bottom: 23px;
+}
+
+.estimates__subtitle {
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 768px) {
+  .estimates__subtitle {
+    margin: 0;
+    font-size: 16px;
+    max-width: 290px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .estimates__text {
+    display: none;
+  }
+}
+
+.estimates__items .mobi {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .estimates__items .mobi {
+    display: block;
+    max-width: 300px;
+  }
+}
+
+.estimates__images {
+  display: flex;
+  align-items: flex-start;
+  flex-shrink: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .estimates__images {
+    width: 150px;
+    margin: 0 auto 32px;
+  }
+}
+
+/*To-learn-more */
+.to-learn-more {
+  margin-top: 200px;
+}
+
+.to-learn-more > .container {
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .to-learn-more {
+    margin-top: 150px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .to-learn-more {
+    background: #f5f7fd;
+    margin-top: 0;
+    padding-top: 30px;
+  }
+}
+
+.to-learn-more__title {
+  color: #4466bc;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+@media screen and (max-width: 1280px) {
+  .to-learn-more__title {
+    margin-bottom: 70px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .to-learn-more__title {
+    margin-bottom: 27px;
+  }
+}
+
+.to-learn-more__items {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+@media screen and (max-width: 768px) {
+  .to-learn-more__items {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.to-learn-more__item {
+  position: relative;
+  z-index: 1;
+  background: #282722;
+}
+
+.to-learn-more__item:first-child .to-learn-more__images {
+  position: relative;
+  right: -1px;
+}
+
+.to-learn-more__images {
+  display: flex;
+  align-items: flex-start;
+  flex-shrink: 0;
+  width: 100%;
+}
+
+.to-learn-more__images .mobi {
+  display: none;
+}
+
+.to-learn-more__images img {
+  width: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .to-learn-more__images .pc {
+    display: none;
+  }
+  .to-learn-more__images .mobi {
+    display: block;
+  }
+}
+
+.to-learn-more__button {
+  width: 420px;
+  height: 76px;
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2;
+}
+
+.to-learn-more__button:hover {
+  transform: translate(-50%, -2px);
+}
+
+.to-learn-more__button:active {
+  transform: translate(-50%, -2px);
+}
+
+@media screen and (max-width: 1280px) {
+  .to-learn-more__button {
+    width: 330px;
+    height: 60px;
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .to-learn-more__button {
+    width: 216px;
+    height: 35px;
+    bottom: 22px;
+    font-size: 14px;
+  }
+}
+
+/*footer*/
+.footer {
+  background: #383c4a;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  padding: 60px 0 40px;
+  color: #fff;
+  margin-top: -1px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    padding: 30px 0;
+  }
+}
+
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__inner {
+    flex-direction: column;
+    margin-bottom: 27px;
+  }
+}
+
+.footer__description {
+  text-align: center;
+}
+
+.footer__logo {
+  display: flex;
+  align-items: center;
+}
+
+.footer__logo-img {
+  display: flex;
+  align-items: flex-start;
+  margin-right: 17px;
+}
+
+.footer__text span {
+  display: block;
+  margin: 10px 0 25px;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__text {
+    font-size: 16px;
+  }
+  .footer__text span {
+    display: inline-block;
+  }
+}
+
+.footer__mail {
+  font-weight: 600;
+  font-size: 18px;
+  display: inline-block;
+  color: #32b28c;
+  margin-bottom: 20px;
+  border-bottom: 1px solid transparent;
+}
+
+.footer__mail:hover {
+  border-bottom: 1px solid #32b28c;
+}
+
+.footer__media {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__media-link {
+  display: flex;
+  align-items: flex-start;
+}
+
+.footer__media-link:hover {
+  transform: translateY(-2px);
+}
+
+.footer__media-link:active {
+  transform: translateY(-1px);
+}
+
+@media screen and (max-width: 768px) {
+  .footer__media {
+    margin-bottom: 18px;
+  }
+}
+
+.footer__media li:first-child {
+  margin-right: 30px;
+}
+
+.footer__list {
+  display: flex;
+  flex-direction: column;
+  letter-spacing: 1px;
+}
+
+.footer__list li {
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 991px) {
+  .footer__list li {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer__list li {
+    margin-right: 0;
+  }
+}
+
+.footer__list li:last-child {
+  margin-bottom: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__list li:last-child {
+    margin-bottom: 15px;
+  }
+}
+
+.footer__list li:nth-child(1) {
+  order: 0;
+}
+
+.footer__list li:nth-child(2) {
+  order: 0;
+}
+
+.footer__list li:nth-child(3) {
+  order: 0;
+}
+
+.footer__list li:nth-child(4) {
+  order: 0;
+}
+
+.footer__list li:nth-child(5) {
+  order: 0;
+}
+
+@media screen and (max-width: 768px) {
+  .footer__list li:nth-child(1) {
+    order: 1;
+  }
+  .footer__list li:nth-child(2) {
+    order: 2;
+  }
+  .footer__list li:nth-child(3) {
+    order: 3;
+  }
+  .footer__list li:nth-child(4) {
+    order: 4;
+  }
+  .footer__list li:nth-child(5) {
+    order: 5;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer__list {
+    text-align: center;
+    font-size: 16px;
+  }
+  .footer__list li {
+    margin-bottom: 15px;
+  }
+}
+
+.footer__link {
+  font-weight: 400;
+  font-size: 13px;
+  border-bottom: 1px solid transparent;
+}
+
+.footer__link:hover {
+  color: #32b28c;
+  border-bottom: 1px solid #32b28c;
+}
+
+.footer__copy {
+  text-align: center;
+  color: #8f8f8f;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.footer .mobi {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .footer .mobi {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+    font-weight: 700;
+    font-size: 24px;
+  }
+  .footer .mobi img {
+    width: 35px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer .pc {
     display: none;
   }
 }
