--- a/scss/style.scss
+++ b/scss/style.scss
@@ -259,6 +259,8 @@ $black: #000;
 $blue: #4466bc;
 $blue_light: #f5f7fd;
 $grey: #9e9e9e;
+$orange: #e58641;
+$red: #bf5b5b;
 
 //! Reset
 /*Reset*/
@@ -461,6 +463,18 @@ a {
   }
 }
 
+.btn1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 27px;
+  letter-spacing: 0.035em;
+  text-transform: uppercase;
+  color: $white;
+}
+
 .btn {
   display: flex;
   justify-content: center;
@@ -556,6 +570,10 @@ a {
         margin-right: 8px;
       }
     }
+
+    @media screen and (max-width: 768px) {
+      font-size: 14px;
+    }
   }
 
   &__info {
@@ -569,6 +587,7 @@ a {
     @media screen and (max-width: 768px) {
       grid-gap: 6px;
       grid-template-columns: repeat(1, 1fr);
+      font-size: 14px;
     }
   }
 
@@ -692,11 +711,11 @@ a {
     }
 
     &.reply {
-      background: #e58641;
+      background: $orange;
     }
 
     &.denied {
-      background: #bf5b5b;
+      background: $red;
     }
   }
 
@@ -1354,6 +1373,15 @@ a {
     &:last-child {
       background: $blue_light;
     }
+
+    &:first-child {
+      .search-mobile__title {
+        font-size: 50px;
+      }
+      .search-mobile__subtitle {
+        font-size: 16px;
+      }
+    }
   }
 
   &__title {
@@ -1417,6 +1445,10 @@ a {
 
     &.green {
       background: $green1;
+    }
+
+    @media screen and (max-width: 768px) {
+      height: 50px;
     }
   }
 }
@@ -1730,6 +1762,9 @@ a {
 
     @media screen and (max-width: 768px) {
       width: 276px;
+      img {
+        margin: 0 auto;
+      }
     }
   }
 
@@ -1792,8 +1827,8 @@ a {
   }
 }
 
-.bg-3 {
-  background-size: 100%;
+.bg-contract-rate {
+  transform: translateY(-300px);
 }
 
 //! Contract-rate
@@ -1835,7 +1870,7 @@ a {
 
     @media screen and (max-width: 768px) {
       flex-direction: column-reverse;
-      padding: 48px 20px 63px;
+      padding: 48px 15px 63px;
     }
   }
 
@@ -1876,7 +1911,7 @@ a {
   }
 
   &__title {
-    color: $green;
+    color: $green1;
     margin-bottom: 36px;
 
     @media screen and (max-width: 768px) {
@@ -1951,7 +1986,7 @@ a {
 
     @media screen and (max-width: 768px) {
       flex-direction: column;
-      padding: 58px 20px 50px;
+      padding: 58px 15px 50px;
     }
   }
 
@@ -2051,7 +2086,7 @@ a {
   }
 }
 
-.bg-4 {
+.bg-view-offers {
   transform: translateY(-500px);
 }
 
@@ -2114,6 +2149,10 @@ a {
       display: flex;
       align-items: flex-start;
       margin-right: 14px;
+
+      @media screen and (max-width: 768px) {
+        height: 13px;
+      }
     }
     .btn {
       border-radius: 100px;
@@ -2153,6 +2192,9 @@ a {
   }
 }
 
+.bg-information {
+  transform: translateY(-300px);
+}
 //! Information
 /*Information*/
 .information {
@@ -2190,7 +2232,7 @@ a {
     display: flex;
     align-items: center;
     margin-bottom: 45px;
-    &:last-child{
+    &:last-child {
       margin: 0;
     }
   }
@@ -2230,4 +2272,524 @@ a {
   }
 }
 
+.bg-video-training {
+  transform: translateY(-200px);
+}
 
+//! Video-training
+/*Video-training*/
+.video-training {
+  margin-top: 200px;
+
+  @media screen and (max-width: 1280px) {
+    margin-top: 150px;
+  }
+
+  @media screen and (max-width: 768px) {
+    margin-top: 32px;
+  }
+
+  &__inner {
+    @media screen and (max-width: 768px) {
+      max-width: 300px;
+      margin: 0 auto;
+    }
+  }
+
+  &__title {
+    color: $blue;
+    margin-bottom: 100px;
+    text-align: center;
+
+    @media screen and (max-width: 1280px) {
+      margin-bottom: 80px;
+    }
+    @media screen and (max-width: 768px) {
+      max-width: 260px;
+      margin: 0 auto 41px;
+    }
+  }
+
+  &__items {
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: repeat(5, 1fr);
+
+    @media screen and (max-width: 1280px) {
+      grid-gap: 20px;
+    }
+
+    @media screen and (max-width: 991px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media screen and (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: row;
+      align-items: center;
+    }
+  }
+
+  &__images {
+    margin-bottom: 40px;
+    display: flex;
+    align-items: flex-start;
+    height: 162px;
+
+    @media screen and (max-width: 1280px) {
+      height: 120px;
+    }
+
+    @media screen and (max-width: 768px) {
+      height: 75px;
+      margin: 0 30px 0 0;
+    }
+  }
+
+  &__label {
+    background: #ffffff;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 100px;
+    width: 201px;
+    height: 55px;
+    letter-spacing: normal;
+
+    font-size: 22px;
+    color: $black;
+
+    @media screen and (max-width: 1280px) {
+      width: 170px;
+      font-size: 16px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 185px;
+      height: 45px;
+
+      font-weight: 500;
+      font-size: 20px;
+    }
+  }
+}
+
+.bg-estimates {
+  transform: translateY(150px);
+}
+
+//! Estimates
+/*Estimates*/
+.estimates {
+  margin-top: 200px;
+
+  @media screen and (max-width: 1280px) {
+    margin-top: 150px;
+  }
+
+  @media screen and (max-width: 768px) {
+    background: $blue_light;
+    margin-top: 31px;
+  }
+
+  &__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      justify-content: center;
+      padding: 60px 0;
+    }
+  }
+
+  &__content {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 33px;
+    letter-spacing: 0.025em;
+    max-width: 590px;
+
+    @media screen and (max-width: 991px) {
+      max-width: 450px;
+    }
+
+    @media screen and (max-width: 768px) {
+      text-align: center;
+      margin-bottom: 32px;
+    }
+  }
+
+  &__title {
+    color: $green1;
+    margin-bottom: 23px;
+  }
+
+  &__subtitle {
+    margin-bottom: 40px;
+    @media screen and (max-width: 768px) {
+      margin: 0;
+      font-size: 16px;
+      max-width: 290px;
+    }
+  }
+
+  &__text {
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+  }
+
+  &__items {
+    .mobi {
+      display: none;
+      @media screen and (max-width: 768px) {
+        display: block;
+        max-width: 300px;
+      }
+    }
+  }
+
+  &__images {
+    display: flex;
+    align-items: flex-start;
+    flex-shrink: 0;
+
+    @media screen and (max-width: 768px) {
+      width: 150px;
+      margin: 0 auto 32px;
+    }
+  }
+}
+
+//! To-learn-more
+/*To-learn-more */
+.to-learn-more {
+  & > .container {
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+  }
+
+  margin-top: 200px;
+
+  @media screen and (max-width: 1280px) {
+    margin-top: 150px;
+  }
+
+  @media screen and (max-width: 768px) {
+    background: $blue_light;
+    margin-top: 0;
+    padding-top: 30px;
+  }
+
+  &__inner {
+  }
+
+  &__title {
+    color: $blue;
+    margin-bottom: 100px;
+    text-align: center;
+
+    @media screen and (max-width: 1280px) {
+      margin-bottom: 70px;
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-bottom: 27px;
+    }
+  }
+
+  &__items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
+    @media screen and (max-width: 768px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  &__item {
+    position: relative;
+    z-index: 1;
+    background: #282722;
+
+    &:first-child {
+      .to-learn-more__images {
+        position: relative;
+        right: -1px;
+      }
+    }
+  }
+
+  &__images {
+    display: flex;
+    align-items: flex-start;
+    flex-shrink: 0;
+    width: 100%;
+
+    .mobi {
+      display: none;
+    }
+
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+
+    @media screen and (max-width: 768px) {
+      .pc {
+        display: none;
+      }
+
+      .mobi {
+        display: block;
+      }
+    }
+  }
+
+  &__button {
+    width: 420px;
+    height: 76px;
+
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+
+    &:hover {
+      transform: translate(-50%, -2px);
+    }
+
+    &:active {
+      transform: translate(-50%, -2px);
+    }
+
+    @media screen and (max-width: 1280px) {
+      width: 330px;
+      height: 60px;
+      font-size: 18px;
+    }
+
+    @media screen and (max-width: 768px) {
+      width: 216px;
+      height: 35px;
+      bottom: 22px;
+      font-size: 14px;
+    }
+  }
+}
+
+//! footer
+/*footer*/
+.footer {
+  background: #383c4a;
+  backdrop-filter: blur(10px);
+  padding: 60px 0 40px;
+  color: $white;
+  margin-top: -1px;
+
+  @media screen and (max-width: 768px) {
+    padding: 30px 0;
+  }
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      margin-bottom: 27px;
+    }
+  }
+
+  &__description {
+    text-align: center;
+  }
+
+  &__logo {
+    display: flex;
+    align-items: center;
+  }
+
+  &__logo-img {
+    display: flex;
+    align-items: flex-start;
+    margin-right: 17px;
+
+  }
+
+  &__text {
+    
+    span {
+      display: block;
+      margin: 10px 0 25px;
+    }
+
+    @media screen and (max-width: 768px) {
+      span{
+        display: inline-block;
+      }
+      font-size: 16px;
+    }
+  }
+
+  &__mail {
+    font-weight: 600;
+    font-size: 18px;
+    display: inline-block;
+    color: $green1;
+    margin-bottom: 20px;
+    border-bottom: 1px solid transparent;
+
+
+    &:hover{
+      border-bottom: 1px solid $green1;
+    }
+  }
+
+  &__media {
+    display: flex;
+    justify-content: center;
+
+    &-link {
+      display: flex;
+      align-items: flex-start;
+
+      &:hover {
+        transform: translateY(-2px);
+      }
+      &:active {
+        transform: translateY(-1px);
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-bottom: 18px;
+    }
+
+    li {
+      &:first-child {
+        margin-right: 30px;
+      }
+    }
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    letter-spacing: 1px;
+
+    li {
+      margin-bottom: 30px;
+
+      @media screen and (max-width: 991px) {
+        margin-bottom: 20px;
+      }
+
+      @media screen and (max-width: 768px) {
+        margin-right: 0;
+      }
+    }
+
+    li{
+      &:last-child{
+        margin-bottom: 0;
+        @media screen and (max-width: 768px) {
+          margin-bottom: 15px;
+        }
+      }
+
+      &:nth-child(1){
+        order: 0;
+      }
+      &:nth-child(2){
+        order: 0;
+      }
+      &:nth-child(3){
+        order: 0;
+      }
+      &:nth-child(4){
+        order: 0;
+      }
+      &:nth-child(5){
+        order: 0;
+      }
+
+      @media screen and (max-width: 768px) {
+        &:nth-child(1){
+          order: 1;
+        }
+        &:nth-child(2){
+          order: 2;
+        }
+        &:nth-child(3){
+          order: 3;
+        }
+        &:nth-child(4){
+          order: 4;
+        }
+        &:nth-child(5){
+          order: 5;
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    @media screen and (max-width: 768px) {
+      text-align: center;
+      font-size: 16px;
+      li{
+        margin-bottom: 15px;
+      }
+    }
+  }
+
+  &__link {
+    font-weight: 400;
+    font-size: 13px;
+    border-bottom: 1px solid transparent;
+
+    &:hover{
+      color: $green1;
+      border-bottom: 1px solid $green1;
+    }
+  }
+
+  &__copy {
+    text-align: center;
+    color: #8f8f8f;
+    font-weight: 500;
+    font-size: 12px;
+  }
+
+  .mobi {
+    display: none;
+    @media screen and (max-width: 768px) {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 15px;
+      font-weight: 700;
+      font-size: 24px;
+      img{
+        width: 35px;
+      }
+    }
+  }
+
+  .pc {
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+  }
+}
