--- a/css/style.css
+++ b/css/style.css
@@ -750,6 +750,11 @@ a:hover {
   z-index: 10;
   padding: 32px 0;
   color: #fff;
+  transition: 300ms;
+}
+
+.header.tinyHead {
+  background: #414141;
 }
 
 @media screen and (max-width: 1280px) {
