--- a/scss/style.scss
+++ b/scss/style.scss
@@ -780,7 +780,11 @@ a {
   z-index: 10;
   padding: 32px 0;
   color: $white;
+  transition: 300ms;
 
+  &.tinyHead{
+    background: rgba(65, 65, 65, 1);
+  }
   @media screen and (max-width: 1280px) {
     padding: 20px 0;
   }
